--- a/client/images.qrc
+++ b/client/images.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/images">
         <file>images/utfpr.png</file>
+        <file>images/refresh.png</file>
     </qresource>
 </RCC>
